# networth

./: .gitignore  Dockerfile  README.md  assets-template.yaml  main.py  pyproject.toml
app/: main.py  requirements.txt
pkg/: setup.py
pkg/src/: __main__.py  assets.py
pkg/src/assets/: __init__.py
pkg/src/assets/bullion/: __init__.py
pkg/src/assets/crypto/: projects.py
pkg/src/assets/crypto/apis/: __init__.py  blockstream.py  coinbase.py  crypto_org.py  etherscan.py  gemini.py
pkg/src/assets/fiat/: __init__.py
pkg/src/assets/institution/: __init__.py
pkg/src/assets/stocks/: __init__.py
pkg/src/assets/vehicles/: __init__.py
