[project]
name = "networth"
version = "0.2.6"
requires-python = ">=3.13"
dependencies = [
    "aioetherscan==0.9.4",
    "aiohttp==3.12.15",
    "click==8.2.1",
    "finnhub-python==2.4.24",
    "pycoingecko==3.2.0",
    "python-decouple==3.8",
    "pyyaml==6.0.2",
    "tenacity>=9.1.2",
]

[tool.black]
line-length = 150
target-version = ['py313']
