[project]
name = "networth"
version = "0.2.6"
requires-python = ">=3.13"
dependencies = [
    "click==8.2.1",
    "finnhub-python==2.4.24",
    "pycoingecko==3.2.0",
    "python-decouple==3.8",
    "pyyaml==6.0.2",
    "requests>=2.32.4",
    "tenacity>=9.1.2",
]

[tool.black]
line-length = 150
target-version = ['py313']
