[project]
name = "networth"
version = "0.3.0"
requires-python = ">=3.14"
dependencies = [
    "click==8.3.1",
    "finnhub-python==2.4.25",
    "pycoingecko==3.2.0",
    "python-decouple==3.8",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "tenacity==9.1.2",
]

[tool.black]
line-length = 150
target-version = ['py314']
